kustomization/overlays/prod/monitoring/networkpolicy/allow-from-grafana-to-internet.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-grafana-to-internet-networkpolicy
spec:
  egress:
    - ports:
        - port: 443
      to:
        - ipBlock:
            except:
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
            cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
    - Egress
