kustomization/overlays/prod/monitoring/networkpolicy/allow-to-grafana.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-grafana-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              hogs.tswn.us/grafana-client: "true"
          podSelector:
            matchLabels:
              hogs.tswn.us/grafana-client: "true"
      ports:
        - port: grafana
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
    - Ingress
