kustomization/overlays/prod/monitoring/networkpolicy/allow-to-loki.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-loki-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: crowdsec
          podSelector:
            matchLabels:
              app.kubernetes.io/name: crowdsec 
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: node-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: unifi-syslog
          podSelector:
            matchLabels:
              app.kubernetes.io/name: alloy
        - ipBlock:
            cidr: 10.11.2.0/24 # hogsflixplus (HFP) remote nodes
        - ipBlock:
            cidr: 10.11.0.101/32 # node01 (alloy-node hostNetwork DaemonSet)
        - ipBlock:
            cidr: 10.11.0.104/32 # worker01 (alloy-node hostNetwork DaemonSet)
        - ipBlock:
            cidr: 10.11.0.105/32 # worker02 (alloy-node hostNetwork DaemonSet)
        - ipBlock:
            cidr: 10.11.0.106/32 # worker03 (alloy-node hostNetwork DaemonSet)
        - ipBlock:
            cidr: 10.11.0.120/32 # gpuworker01 (alloy-node hostNetwork DaemonSet)
        - ipBlock:
            cidr: 10.11.0.121/32 # gpuworker02 (alloy-node hostNetwork DaemonSet)
      ports:
        - port: 3100
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
    - Ingress
